[project]
name = "roco-push-console"
version = "0.1.0"
description = "Roco merchant notifier with a Docker web console and pluggable push providers."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "requests>=2.31.0",
    "uvicorn[standard]>=0.30.0",
]

[project.scripts]
roco-push-once = "roco_serverchan_notifier.app:cli"
roco-push-scheduler = "roco_serverchan_notifier.scheduler:cli"
roco-push-console = "roco_serverchan_notifier.web:cli"

[tool.uv]
package = true

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
